Minor update to clean up Lint warnings.