@@ -4,6 +4,7 @@ import java.util.ArrayList;
 
 import android.app.Activity;
 import android.app.Dialog;
+import android.content.Context;
 import android.content.Intent;
 import android.content.pm.PackageInfo;
 import android.content.pm.PackageManager;
@@ -71,13 +72,10 @@ public class PaceCalc extends Activity {
 		paceButton = (Button) findViewById(R.id.Button03);
 
 		s = (Spinner) findViewById(R.id.SpinnerImperial);
-		ArrayAdapter adapter = ArrayAdapter.createFromResource(this,
+		ArrayAdapter<CharSequence> adapter = ArrayAdapter.createFromResource(this,
 				R.array.imperial, android.R.layout.simple_spinner_item);
 		adapter.setDropDownViewResource(android.R.layout.simple_spinner_dropdown_item);
 		s.setAdapter(adapter);
-
-		// s.setFocusable(true);
-		// s.setFocusableInTouchMode(true);
 
 		s.setOnItemSelectedListener(new OnItemSelectedListener() {
 
@@ -100,16 +98,6 @@ public class PaceCalc extends Activity {
 			public void onNothingSelected(AdapterView<?> arg0) {
 			}
 		});
-		/*
-		 * s.setOnFocusChangeListener(new OnFocusChangeListener() {
-		 * 
-		 * @Override public void onFocusChange(View v, boolean hasFocus) { if
-		 * (hasFocus) { distanceButton.setEnabled(false); } else {
-		 * distanceButton.setEnabled(true); } super.onFocusChange(v, hasFocus);
-		 * }
-		 * 
-		 * });
-		 */
 
 		switchButton.setOnClickListener(new View.OnClickListener() {
 			public void onClick(View v) {
@@ -249,8 +237,7 @@ public class PaceCalc extends Activity {
 	}
 
 	public void myClickHandler(View view) {
-
-		InputMethodManager imm = (InputMethodManager) getSystemService(this.INPUT_METHOD_SERVICE);
+		InputMethodManager imm = (InputMethodManager) getSystemService(Context.INPUT_METHOD_SERVICE);
 		switch (view.getId()) {
 		case R.id.Button01:
 			String t3a = text3a.getText().toString();
@@ -265,8 +252,8 @@ public class PaceCalc extends Activity {
 			String d2 = text2.getText().toString();
 			if (d2 == null || d2.length() == 0)
 				d2 = "0";
-			String time = getTime(new Double(d2), new Double(t3a), new Double(
-					t3b), new Double(t3c));
+			String time = getTime(Double.valueOf(d2), Double.valueOf(t3a), Double.valueOf(
+					t3b), Double.valueOf(t3c));
 			text1a.setText(time.substring(0, time.indexOf(":")));
 			text1b.setText(time.substring(time.indexOf(":") + 1,
 					time.lastIndexOf(":")));
@@ -297,9 +284,9 @@ public class PaceCalc extends Activity {
 			String fff = text3c.getText().toString();
 			if (fff == null || fff.length() == 0)
 				fff = "0";
-			String dist = getDistance(new Double(aaa), new Double(bbb),
-					new Double(ccc), new Double(ddd), new Double(eee),
-					new Double(fff));
+			String dist = getDistance(Double.valueOf(aaa), Double.valueOf(bbb),
+					Double.valueOf(ccc), Double.valueOf(ddd), Double.valueOf(eee),
+					Double.valueOf(fff));
 			text2.setText(dist);
 			timeButton.setEnabled(true);
 			distanceButton.setEnabled(true);
@@ -321,8 +308,8 @@ public class PaceCalc extends Activity {
 			String d3 = text2.getText().toString();
 			if (d3 == null || d3.length() == 0)
 				d3 = "0";
-			String pace = getPace(new Double(d3), new Double(t1a), new Double(
-					t1b), new Double(t1c));
+			String pace = getPace(Double.valueOf(d3), Double.valueOf(t1a), Double.valueOf(
+					t1b), Double.valueOf(t1c));
 			text3a.setText(pace.substring(0, pace.indexOf(":")));
 			text3b.setText(pace.substring(pace.indexOf(":") + 1,
 					pace.lastIndexOf(":")));
@@ -433,7 +420,7 @@ public class PaceCalc extends Activity {
 		double total = totalSecs / dist;
 		int tHours = (int) (total / 60 / 60);
 		int tMins = (int) ((total / 60) - (tHours * 60));
-		Double tSecs = new Double((total - ((tHours * 60 * 60) + (tMins * 60))));
+		Double tSecs = Double.valueOf((total - ((tHours * 60 * 60) + (tMins * 60))));
 		if (!tSecs.isNaN()) {
 			this.setSplits(dist.doubleValue(), totalSecs);
 			return paddedInt(tHours) + ":" + paddedInt(tMins) + ":"
@@ -443,7 +430,7 @@ public class PaceCalc extends Activity {
 		}
 	}
 
-	private String convertPace(String hours, String mins, String secs) {
+	/*private String convertPace(String hours, String mins, String secs) {
 		double totalSecs = 0.0;
 		if (hours == null || hours.equals("")) {
 			hours = "0";
@@ -455,9 +442,9 @@ public class PaceCalc extends Activity {
 		if (secs == null || secs.equals("")) {
 			secs = "0";
 		}
-		Double dHours = new Double(hours);
-		Double dMins = new Double(mins);
-		Double dSecs = new Double(secs);
+		Double dHours = Double.valueOf(hours);
+		Double dMins = Double.valueOf(mins);
+		Double dSecs = Double.valueOf(secs);
 		if (dHours > 0) {
 			totalSecs = (dHours * 60 * 60) + (60 * dMins) + dSecs;
 		} else {
@@ -468,7 +455,7 @@ public class PaceCalc extends Activity {
 		int tMins = (int) ((convertedSecs / 60) - (tHours * 60));
 		double tSecs = (double) (convertedSecs - ((tHours * 60 * 60) + (tMins * 60)));
 		return (paddedInt(tHours) + ":" + paddedInt(tMins) + ":" + tSecs);
-	}
+	}*/
 
 	private String getDistance(Double hours1, Double mins1, Double secs1,
 			Double hours2, Double mins2, Double secs2) {
